bridges/jac-bridge/tests/ui/ownership_on_non_handle.stderr
error: #[jac(borrowed)] applies only to a method returning an opaque handle (a crate type or Option<crate type>)
  --> tests/ui/ownership_on_non_handle.rs:18:28
   |
18 |         pub fn peek(&self) -> bool {
   |                            ^
